# x64rag

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: reasoning.md  retrieval.md  x64rag-long-context-strategy.md  x64rag-roadmap.md
examples/reasoning/cli/customer-support/: README.md
examples/reasoning/cli/scifi-library/: README.md
examples/reasoning/sdk/: basic.py  chat_support.py  email_system.py  minimal.py  quality_assurance.py
examples/retrieval/cli/factory-assistant/: README.md
examples/retrieval/cli/scifi-library/: README.md
examples/retrieval/sdk/: basic.py  hybrid_search.py  minimal.py  modular_pipeline.py
scripts/: pcu.py
src/x64rag/: __init__.py  cli.py
src/x64rag/common/: cli.py  errors.py  language_model.py  logging.py  startup.py
src/x64rag/common/tests/: test_build_registry.py  test_logging_baml_env.py
src/x64rag/reasoning/: README.md  __init__.py  protocols.py
src/x64rag/reasoning/cli/: __init__.py  config.py  constants.py  output.py
src/x64rag/reasoning/cli/commands/: init.py  (+6 more)
src/x64rag/reasoning/common/: concurrency.py  errors.py  language_model.py  logging.py  startup.py
src/x64rag/reasoning/tests/: test_classification_strategies.py  test_cli_config.py  test_cli_output.py  test_cli_references.py  test_clustering.py  test_common.py  test_evaluation_metrics.py  test_pipeline_flows.py
src/x64rag/retrieval/: README.md  __init__.py  server.py
src/x64rag/retrieval/cli/: __init__.py  config.py  output.py
src/x64rag/retrieval/common/: errors.py  formatting.py  language_model.py  models.py  startup.py
src/x64rag/retrieval/modules/: namespace.py
src/x64rag/retrieval/tests/: test_chunk_refinement.py  test_cli_config.py  test_cli_output.py  test_cli_session.py  test_config_validation.py  test_contextual_chunking.py  test_document_ingestion.py  test_document_retrieval.py  test_embeddings_facade.py  test_evaluation_metrics.py  test_excerpt.py  test_filesystem_document_store.py  test_fulltext_ingestion.py  test_fulltext_retrieval.py  test_fusion.py  test_generate_step.py  test_generation_service.py  test_graph_ingestion.py  test_graph_ingestion_method.py  test_graph_mapper.py  test_graph_retrieval.py  test_graph_retrieval_method.py  test_graph_wiring.py  test_hybrid_retrieval.py  test_ingestion_advanced.py  test_ingestion_service_methods.py  test_namespace.py  test_neo4j_graph_store.py  test_parent_child_chunking.py  test_postgres_document_store.py  test_query_rewriting.py  test_reranking_facade.py  test_retrieval_judging.py  test_retrieval_service_methods.py  test_retrieval_service_refinement.py  test_server_query.py  test_sparse_embeddings.py  test_splitter.py  test_tree_config.py  test_tree_e2e.py  (+8 more)
(+121 files in other folders)
